# sonar-qc

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  false-result.md  feature-request.md
.github/workflows/: ci.yml
docs/: LIMITATIONS.md  METHODOLOGY.md
sonar_qc/: __init__.py  __main__.py  cli.py  features.py  localize.py  quality.py  report.py  scoring.py  signatures.py
tests/: test_features.py  test_localize.py  test_scoring.py  test_signatures.py
tests/fixtures/: README.md
